--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require-dev": {
         "codeception/codeception": "^2.2",
         "friendsofphp/php-cs-fixer": "^2.10",
-        "phpstan/phpstan-shim": "^0.9.2"
+        "phpstan/phpstan-shim": "^0.9.2",
+        "latte/latte": "^2.4"
     },
     "autoload": {
         "psr-0" : {
